@@ -1,1 +1,5 @@
+# -*- coding: utf-8 -*-
 
+from zope.i18nmessageid import MessageFactory
+
+messageFactory = MessageFactory('collective.stringinterp.smartlink')
